samples/invalid/01-missing-direction.mmd
%% Diagram: Missing direction

a["A"]
a --> b
b["B"]
